--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello!
+<html>
+  <head>
+    <title> List of files </title>
+  </head>
+  <body>
+  List of files:
+    <ul>
+      <li><a href="/files/document.rtf">document.rtf</a></li>
+    </ul>
+  </body>
+</html>
