--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
   List of files:
     <ul>
-      <li><a href="/files/document.rtf">document.rtf</a></li>
+      <li><a href="/files/document.rtf.txt">document.rtf.txt</a></li>
     </ul>
   </body>
 </html>
